--- a/app/assets/stylesheets/components/_hero.scss
+++ b/app/assets/stylesheets/components/_hero.scss
@@ -8,7 +8,7 @@
   text-align: center;
   padding: 2rem 0;
   position: relative;
-  margin-top: -20px;
+  margin-top: -100px;
 }
 
 .hero-content {
@@ -111,7 +111,7 @@
   .hero-section {
     min-height: 50vh;
     padding: 2rem 0;
-    margin-top: -10px;
+    margin-top: -100px;
   }
 
   .hero-greeting {
